@@ -447,3 +447,6 @@ $list-paddings-values: 0, 0.25, 0.5, 0.75, 1, 2 !default; // specify 2.5 if need
   right: 0;
   bottom: 0;
 }
+.no-pointer-events {
+  pointer-events: none;
+}
