@@ -10,6 +10,10 @@ revamped modals:
 - added anim out
 - cleanup, positionning, RTL tests, comments)
 
+Others:
+
+- added `no-pointer-events` helper class
+
 
 # [1.6.3] - 2019-05-03
 
